add codegen-template
