# app/security.go
@@ -1,0 +1,46 @@
+// Code generated by goagen v1.2.0, DO NOT EDIT.
+//
+// API "Chat API": Application Security
+//
+// Command:
+// $ goagen
+// --design=github.com/m0a-mystudy/goa-chat/design
+// --out=$(GOPATH)/src/github.com/m0a-mystudy/goa-chat
+// --version=v1.2.0-dirty
+
+package app
+
+import (
+	"context"
+	"github.com/goadesign/goa"
+	"net/http"
+)
+
+type (
+	// Private type used to store auth handler info in request context
+	authMiddlewareKey string
+)
+
+// UseBasicAuthMiddleware mounts the basic_auth auth middleware onto the service.
+func UseBasicAuthMiddleware(service *goa.Service, middleware goa.Middleware) {
+	service.Context = context.WithValue(service.Context, authMiddlewareKey("basic_auth"), middleware)
+}
+
+// NewBasicAuthSecurity creates a basic_auth security definition.
+func NewBasicAuthSecurity() *goa.BasicAuthSecurity {
+	def := goa.BasicAuthSecurity{}
+	return &def
+}
+
+// handleSecurity creates a handler that runs the auth middleware for the security scheme.
+func handleSecurity(schemeName string, h goa.Handler, scopes ...string) goa.Handler {
+	return func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
+		scheme := ctx.Value(authMiddlewareKey(schemeName))
+		am, ok := scheme.(goa.Middleware)
+		if !ok {
+			return goa.NoAuthMiddleware(schemeName)
+		}
+		ctx = goa.WithRequiredScopes(ctx, scopes)
+		return am(h)(ctx, rw, req)
+	}
+}
