# public/swagger/swagger.yaml
@@ -5,12 +5,48 @@ consumes:
 - application/gob
 - application/x-gob
 definitions:
+  Account:
+    description: A account (default view)
+    example:
+      created: 2002-07-08T14:47:02+09:00
+      id: Dolor maxime deleniti.
+      password: Culpa sequi aut quibusdam praesentium ut.
+    properties:
+      created:
+        description: Date of creation
+        example: 2002-07-08T14:47:02+09:00
+        format: date-time
+        type: string
+      id:
+        description: ID of room
+        example: Dolor maxime deleniti.
+        type: string
+      password:
+        example: Culpa sequi aut quibusdam praesentium ut.
+        type: string
+    required:
+    - id
+    - password
+    - created
+    title: 'Mediatype identifier: application/vnd.account+json; view=default'
+    type: object
+  AccountCollection:
+    description: AccountCollection is the media type for an array of Account (default
+      view)
+    example:
+    - created: 2002-07-08T14:47:02+09:00
+      id: Dolor maxime deleniti.
+      password: Culpa sequi aut quibusdam praesentium ut.
+    items:
+      $ref: '#/definitions/Account'
+    title: 'Mediatype identifier: application/vnd.account+json; type=collection; view=default'
+    type: array
   Message:
     description: A Message (default view)
     example:
       accountID: 1
       body: this is chat message
-      postDate: 2002-07-08T14:47:02+09:00
+      postDate: 1978-10-30T20:16:40+09:00
     properties:
       accountID:
         example: 1
@@ -23,7 +59,7 @@ definitions:
         type: string
       postDate:
         default: 1978-06-30T10:00:00+09:00
-        example: 2002-07-08T14:47:02+09:00
+        example: 1978-10-30T20:16:40+09:00
         format: date-time
         type: string
     required:
@@ -38,13 +74,13 @@ definitions:
     example:
     - accountID: 1
       body: this is chat message
-      postDate: 2002-07-08T14:47:02+09:00
+      postDate: 1978-10-30T20:16:40+09:00
     - accountID: 1
       body: this is chat message
-      postDate: 2002-07-08T14:47:02+09:00
+      postDate: 1978-10-30T20:16:40+09:00
     - accountID: 1
       body: this is chat message
-      postDate: 2002-07-08T14:47:02+09:00
+      postDate: 1978-10-30T20:16:40+09:00
     items:
       $ref: '#/definitions/Message'
     title: 'Mediatype identifier: application/vnd.message+json; type=collection; view=default'
@@ -53,7 +89,7 @@ definitions:
     example:
       accountID: 1
       body: this is chat message
-      postDate: 1994-12-20T11:39:22+09:00
+      postDate: 2008-11-20T01:54:58+09:00
     properties:
       accountID:
         example: 1
@@ -66,7 +102,7 @@ definitions:
         type: string
       postDate:
         default: 1978-06-30T10:00:00+09:00
-        example: 1994-12-20T11:39:22+09:00
+        example: 2008-11-20T01:54:58+09:00
         format: date-time
         type: string
     required:
@@ -78,14 +114,14 @@ definitions:
   Room:
     description: A room (default view)
     example:
-      created: 1976-11-05T19:47:09+09:00
+      created: 1972-12-18T13:15:32+09:00
       description: room description
-      id: 5.4174466e+18
+      id: 4.1818056e+18
       name: room001
     properties:
       created:
         description: Date of creation
-        example: 1976-11-05T19:47:09+09:00
+        example: 1972-12-18T13:15:32+09:00
         format: date-time
         type: string
       description:
@@ -95,7 +131,7 @@ definitions:
         type: string
       id:
         description: ID of room
-        example: 5.4174466e+18
+        example: 4.1818056e+18
         format: int64
         type: integer
       name:
@@ -110,13 +146,13 @@ definitions:
   RoomCollection:
     description: RoomCollection is the media type for an array of Room (default view)
     example:
-    - created: 1976-11-05T19:47:09+09:00
+    - created: 1972-12-18T13:15:32+09:00
       description: room description
-      id: 5.4174466e+18
+      id: 4.1818056e+18
       name: room001
-    - created: 1976-11-05T19:47:09+09:00
+    - created: 1972-12-18T13:15:32+09:00
       description: room description
-      id: 5.4174466e+18
+      id: 4.1818056e+18
       name: room001
     items:
       $ref: '#/definitions/Room'
@@ -124,14 +160,14 @@ definitions:
     type: array
   RoomPayload:
     example:
-      created: 2007-06-24T18:40:57+09:00
+      created: 1973-10-13T08:06:32+09:00
       description: room description
-      id: 7.6111917e+18
+      id: 5.8591655e+18
       name: room001
     properties:
       created:
         description: Date of creation
-        example: 2007-06-24T18:40:57+09:00
+        example: 1973-10-13T08:06:32+09:00
         format: date-time
         type: string
       description:
@@ -141,7 +177,7 @@ definitions:
         type: string
       id:
         description: ID of room
-        example: 7.6111917e+18
+        example: 5.8591655e+18
         format: int64
         type: integer
       name:
@@ -196,6 +232,76 @@ info:
   title: goa study chat
   version: ""
 paths:
+  /accounts:
+    get:
+      description: Retrieve all accunts.
+      operationId: account#list
+      produces:
+      - application/vnd.account+json; type=collection
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/AccountCollection'
+        "404":
+          description: Not Found
+      schemes:
+      - http
+      summary: list account
+      tags:
+      - account
+    post:
+      description: Create new account
+      operationId: account#post
+      parameters:
+      - in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/MessagePayload'
+      responses:
+        "201":
+          description: Resource created
+          headers:
+            Location:
+              description: href to created resource
+              pattern: ^/accounts/[0-9]+$
+              type: string
+        "400":
+          description: Bad Request
+      schemes:
+      - http
+      summary: post account
+      tags:
+      - account
+  /accounts/{user}:
+    get:
+      description: Retrieve account with given id or something
+      operationId: account#show
+      parameters:
+      - in: path
+        name: user
+        required: true
+        type: string
+      produces:
+      - application/vnd.goa.error
+      - application/vnd.account+json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/Account'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/error'
+        "404":
+          description: Not Found
+      schemes:
+      - http
+      summary: show account
+      tags:
+      - account
   /rooms:
     get:
       description: Retrieve all rooms.
@@ -235,6 +341,8 @@ paths:
           description: Bad Request
       schemes:
       - http
+      security:
+      - basic_auth: []
       summary: post room
       tags:
       - room
@@ -314,6 +422,8 @@ paths:
           description: Bad Request
       schemes:
       - http
+      security:
+      - basic_auth: []
       summary: post message
       tags:
       - message
@@ -385,9 +495,12 @@ responses:
   OK:
     description: OK
     schema:
-      $ref: '#/definitions/Message'
+      $ref: '#/definitions/Account'
   SwitchingProtocols:
     description: Switching Protocols
 schemes:
 - http
+securityDefinitions:
+  basic_auth:
+    type: basic
 swagger: "2.0"
